Fixed line through css to work on safari

--- a/angular-src/src/app/components/dashboard/dashboard.component.css
+++ b/angular-src/src/app/components/dashboard/dashboard.component.css
@@ -62,6 +62,8 @@ li:nth-child(even) {
 }
 
 .completed .todoBox .todo {
+  text-decoration-line: line-through;
   -webkit-text-decoration-line: line-through;
+  text-decoration-color: red;
   -webkit-text-decoration-color: red;
 }
